fixed issue on mobile where there was a horizontal scroll

--- a/frontend/src/components-css/Header.css
+++ b/frontend/src/components-css/Header.css
@@ -113,7 +113,7 @@
   align-items: center;
   background: #333;
   position: absolute;
-  top: 60px; /* Adjust this value to position the menu below the header */
+  top: 50px; /* Adjust this value to position the menu below the header */
   padding-top: 20px;
   padding-bottom: 15px;
   left: 0;
