--- a/frontend/src/components-css/Home.css
+++ b/frontend/src/components-css/Home.css
@@ -7,3 +7,8 @@
     position: relative;
     overflow-x: hidden;
 }
+
+* {
+    outline: 1px solid red;
+    outline-offset: -1px;
+}
