--- a/frontend/src/components-css/Slideshow.css
+++ b/frontend/src/components-css/Slideshow.css
@@ -6,7 +6,8 @@ body {
 .slideshow {
     position: relative;
     top: 0;
-    width: 100vw;
+    width: 100%;
+    max-width: 100%;
     height: 95vh !important;
     overflow: hidden;
     z-index: 200;
